<resources>
    <string name="app_name">mycontacts</string>
    <string name="name_hint">name</string>
    <string name="email_hint">email</string>
    <string name="favorite">favorite</string>
    <string name="new_contacts">New contact</string>
    <string name="show_favorites">Show favorites</string>
    <string name="show_all">Show All</string>
    <string name="addresshint">Address</string>
    <string name="send_email">Send Email</string>
    <string name="email_app_error">no email app configured</string>
    <string name="settings_sync_category">Sync Settings</string>
    <string name="settings_sync_server">Server Address</string>
    <string name="settings_sync_username">Username</string>
    <string name="settings_sync_password">Password</string>
    <string name="settings">settings</string>
</resources>
